--- a/Assets/Styling/style.css
+++ b/Assets/Styling/style.css
@@ -1,12 +1,13 @@
 .footer {
     flex-shrink: 0;
-    background-color: #666;
+    background-color: #343a40;
     min-height: 40px;
     color: white;
     padding: 20px;
     border-top-style: solid;
     border-top-color: lightslategray;
     border-top-width: 5px;
+    margin-top: 20px;
   }
 
   .copyright {
@@ -22,3 +23,22 @@
     display: block;
   
   }
+  body{
+      background-color: #282828;
+      color: whitesmoke;
+  }
+
+  .jumbotron {
+    background-color: lightslategray;
+    }
+
+    .graphBlock {
+        margin-top: 30px;
+    }
+    #stockInput {
+        padding-top: 6px;
+    }
+
+    #buttonBlock {
+        padding-top: 6px;
+    }
