corrected issue with stock name not reading

--- a/Assets/Styling/style.css
+++ b/Assets/Styling/style.css
@@ -37,8 +37,12 @@
     }
     #stockInput {
         padding-top: 6px;
+        margin-top: 15px;
     }
 
     #buttonBlock {
         padding-top: 6px;
     }
+    .btn {
+      margin-top: 6px;
+      }
