added disclaimer modole

--- a/Assets/Styling/style.css
+++ b/Assets/Styling/style.css
@@ -55,3 +55,9 @@
     .marketwatch {
       color: #343a40;
     }
+    .modal-content {
+      color: whitesmoke;
+      background-color: #282828;
+      border-color: whitesmoke;
+      }
+   
