fixed modole, made stock chart dynamic and set up metrics to recieve dynamic data

--- a/Assets/Styling/style.css
+++ b/Assets/Styling/style.css
@@ -60,4 +60,7 @@
       background-color: #282828;
       border-color: whitesmoke;
       }
+    .chartHeader {
+      padding-left: 40px;
+    }
    
